# python-learn-to-tracing

./: .gitignore  Dockerfile  Dockerfile_app_2  README.md  compose.yaml  pyproject.toml  win_auto_instrument_run.ps1
configs/grafana/: datasources.yaml
configs/otel/: config.yaml
configs/prometheus/: prometheus.yaml
front/: Dockerfile  package-lock.json  package.json  vite.config.js
front/src/: App.vue
front/src/utils/: api.js  tracing.js
images/: scheme.excalidraw
python_app/: Dockerfile  pyproject.toml
python_app/otel_py_example/: __init__.py  __main__.py  clients.py  middleware.py  settings.py  utils.py
python_app/otel_py_example/alembic/: env.py
python_app/otel_py_example/models/: tables.py
python_app/otel_py_example/repository/: entities.py  redis_repo.py
python_app/otel_py_example/resources/: database.py
python_app1/: __main__.py  clients.py  settings.py  utils.py
python_app1/alembic/: env.py
python_app1/alembic/versions/: 3f491f6f9d14_init.py
python_app1/repository/: entities.py  redis_repo.py
python_app1/resources/: database.py
python_app2/: __main__.py  pokeapi_client.py  utils.py
scripts/: alembic.sh  curl_fastapi_post.sh  k6_fastapi_get.js
