[project]
name = "python-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "opentelemetry-distro>=0.56b0",
    "opentelemetry-exporter-otlp>=1.35.0",
    "opentelemetry-instrumentation-asyncpg>=0.56b0",
    "opentelemetry-instrumentation-fastapi>=0.56b0",
    "opentelemetry-instrumentation-httpx>=0.56b0",
    "opentelemetry-instrumentation-redis>=0.56b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.56b0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
 
[tool.ruff.format]
docstring-code-format = true
 
[tool.ruff.lint]
select = ["ALL"]
ignore = ["EM", "FBT", "TRY003", "D1", "D203", "D213", "G004", "FA", "COM812", "ISC001"]
 
[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2
 
[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["S101", "S311"]
 
[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
